--- a/package.json
+++ b/package.json
@@ -3,22 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^17.0.0",
+    "@types/react": "^18.2.25",
     "next": "^12.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "typescript": "^4.7.0"
+    "typescript": "^4.7.0",
+    "vcc-ui": "^4.6.2"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\""
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.5",
+    "@types/testing-library__dom": "^7.5.0",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "cypress": "^13.3.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^12.0.0",
-    "jest": "^28.0.0"
+    "jest": "^28.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "start-server-and-test": "^2.0.1"
   }
 }
