--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": ["cypress", "jest", "node"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
